Refactor DivPO implementation into modular structure with dedicated files for configuration, data handling, model management, and training orchestration. Introduce new scripts for running training and setting up NLP resources, while enhancing logging and quality checks for generated nouns. Update .gitignore to include Python cache files and temporary outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Ignore all checkpoints, logs, and model outputs from Phase 1 training
-divpo_dat_model_phase1/ 
+divpo_dat_model_phase1/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.pytest_cache/ 
